# scraper-framework

./: README.md  pyproject.toml  requirements.txt
src/scraper_framework/: cli.py  fetchers.py
src/scraper_framework/adapters/: books_toscrape.py  quotes_toscrape.py
src/scraper_framework/core/: adapter.py  engine.py  models.py  proxy.py  storage.py
tests/: conftest.py  test_adapters.py  test_engine.py  test_models.py  test_proxy.py  test_storage.py
