[project]
name = "scraper-framework"
version = "0.1.0"
description = "Adapter-pattern multi-site scraping framework with idempotent storage and proxy rotation"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
browser = ["playwright>=1.45"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
scraper-framework = "scraper_framework.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
